Adds Notification Center, Notification listener per editor, online status feedback. Separates editor content changes from being connected to Firebase. Adds starvation check for Firepad auth fail silent error.

--- a/scr-app/public/index.html
+++ b/scr-app/public/index.html
@@ -33,13 +33,13 @@
       rel="stylesheet">
 <!--<script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.10.1/min/vs/loader.js"></script>-->
 <!--<script src="%PUBLIC_URL%/fireco/monaco-editor/min/vs/loader.js"></script>-->
-<script>var require = { paths: { 'vs':
-      '%PUBLIC_URL%/fireco/monaco-editor/min/vs' } };</script>
-<script src="%PUBLIC_URL%/fireco/monaco-editor/min/vs/loader.js"></script>
-<script
-  src="%PUBLIC_URL%/fireco/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
-<script
-  src="%PUBLIC_URL%/fireco/monaco-editor/min/vs/editor/editor.main.js"></script>
+<!--<script>var require = { paths: { 'vs':-->
+      <!--'%PUBLIC_URL%/fireco/monaco-editor/min/vs' } };</script>-->
+<!--<script src="%PUBLIC_URL%/fireco/monaco-editor/min/vs/loader.js"></script>-->
+<!--<script-->
+  <!--src="%PUBLIC_URL%/fireco/monaco-editor/min/vs/editor/editor.main.nls.js"></script>-->
+<!--<script-->
+  <!--src="%PUBLIC_URL%/fireco/monaco-editor/min/vs/editor/editor.main.js"></script>-->
 <noscript>
   You need to enable JavaScript to run this app.
 </noscript>
