--- a/scr-app/public/index.html
+++ b/scr-app/public/index.html
@@ -8,6 +8,7 @@
           content="user-scalable=0, initial-scale=1, minimum-scale=1, width=device-width, height=device-height">
     <meta name="theme-color" content="#000000">
     <title>seeCode.run</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <script>
