--- a/scr-app/public/index.html
+++ b/scr-app/public/index.html
@@ -7,8 +7,6 @@
     <meta name="viewport"
           content="user-scalable=0, initial-scale=1, minimum-scale=1, width=device-width, height=device-height">
     <meta name="theme-color" content="#000000">
-    <title>seeCode.run</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <script>
@@ -18,6 +16,8 @@
             }
         }
     </script>
+    <title>seeCode.run</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
 </head>
 <body>
 <noscript>
