--- a/scr-app/public/index.html
+++ b/scr-app/public/index.html
@@ -10,14 +10,24 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <script>
-        if ('%PUBLIC_URL%') {
-            if (window.location.protocol !== 'https:') {
-                window.location.protocol = 'https';
-            }
-        }
+       // react-scripts 5.0.0 :: avoids Uncaught Reference errors:
+       // Buffer is not defined, process is not defined (react refresh:6:1)
+       window.Buffer = function () {
+          this.isBuffer = function () { return false};
+       };
+       window.process = {platform: null, env: null};
+       // done fix.
+
+       // keeping it S...
+       if ('%PUBLIC_URL%') {
+          if (window.location.protocol !== 'https:') {
+             window.location.protocol = 'https';
+          }
+       }
     </script>
     <title>seeCode.run</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
 </head>
 <body>
 <noscript>
